--- a/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/AmazonSWAShipmentDetailsControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/ShipmentDetails/AmazonSWAShipmentDetailsControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="ShipWorks.OrderLookup.Controls.ShipmentDetails.AmazonSFPShipmentDetailsControl"
+    x:Class="ShipWorks.OrderLookup.Controls.ShipmentDetails.AmazonSWAShipmentDetailsControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -98,38 +98,20 @@
                 Grid.Row="3"
                 Grid.Column="0"
                 Style="{StaticResource FieldLabel}"
-                Text="Confirmation" />
-
-            <ComboBox
-                Grid.Row="3"
-                Grid.Column="1"
-                DisplayMemberPath="Value"
-                ItemsSource="{Binding ConfirmationTypes}"
-                SelectedValuePath="Key"
-                Style="{StaticResource FormComboBox}">
-                <ComboBox.SelectedValue>
-                    <Binding Path="ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DeliveryExperience" />
-                </ComboBox.SelectedValue>
-            </ComboBox>
-
-            <TextBlock
-                Grid.Row="4"
-                Grid.Column="0"
-                Style="{StaticResource FieldLabel}"
                 Text="Weight" />
             <ui:WeightControl
-                Grid.Row="4"
+                Grid.Row="3"
                 Grid.Column="1"
                 AcceptApplyWeightKeyboardShortcut="True"
                 ErrorMessage="{Binding WeightErrorMessage}"
                 Style="{StaticResource OrderLookupWeightControl}"
                 Weight="{Binding ShipmentModel.ShipmentAdapter.ContentWeight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=true, NotifyOnValidationError=true}" />
             <TextBlock
-                Grid.Row="5"
+                Grid.Row="4"
                 Grid.Column="0"
                 Style="{StaticResource FieldLabel}"
                 Text="Dimensions" />
-            <Grid Grid.Row="5" Grid.Column="1">
+            <Grid Grid.Row="4" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
@@ -144,7 +126,7 @@
                     <ComboBox.SelectedValue>
                         <Binding
                             Mode="TwoWay"
-                            Path="ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DimsProfileID"
+                            Path="ShipmentModel.ShipmentAdapter.Shipment.AmazonSWA.DimsProfileID"
                             UpdateSourceTrigger="PropertyChanged" />
                     </ComboBox.SelectedValue>
                 </ComboBox>
@@ -159,7 +141,7 @@
             </Grid>
 
             <Grid
-                Grid.Row="6"
+                Grid.Row="5"
                 Grid.Column="1"
                 Margin="10,0,0,10">
                 <Grid.ColumnDefinitions>
@@ -175,7 +157,7 @@
                     IsEnabled="{Binding IsProfileSelected, Converter={StaticResource InvertBoolean}}"
                     MaxLength="5"
                     Style="{StaticResource FormTextBox}"
-                    Text="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DimsLength,
+                    Text="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSWA.DimsLength,
                             Converter={StaticResource StringEmptyWhenEqualToParameter},
                             ConverterParameter=0}" />
 
@@ -186,7 +168,7 @@
                     IsEnabled="{Binding IsProfileSelected, Converter={StaticResource InvertBoolean}}"
                     MaxLength="5"
                     Style="{StaticResource FormTextBox}"
-                    Text="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DimsWidth,
+                    Text="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSWA.DimsWidth,
                             Converter={StaticResource StringEmptyWhenEqualToParameter},
                             ConverterParameter=0}" />
 
@@ -197,7 +179,7 @@
                     IsEnabled="{Binding IsProfileSelected, Converter={StaticResource InvertBoolean}}"
                     MaxLength="5"
                     Style="{StaticResource FormTextBox}"
-                    Text="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DimsHeight,
+                    Text="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSWA.DimsHeight,
                             Converter={StaticResource StringEmptyWhenEqualToParameter},
                             ConverterParameter=0}" />
 
@@ -210,7 +192,7 @@
             </Grid>
 
             <Grid
-                Grid.Row="7"
+                Grid.Row="6"
                 Grid.Column="1"
                 Margin="5,0,0,10">
                 <Grid.ColumnDefinitions>
@@ -221,7 +203,7 @@
                     Grid.Column="0"
                     Margin="5,0,0,0"
                     Content="Add-to weight"
-                    IsChecked="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DimsAddWeight}"
+                    IsChecked="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSWA.DimsAddWeight}"
                     Style="{StaticResource FormCheckBox}" />
 
                 <ui:WeightInput
@@ -238,11 +220,11 @@
                     Foreground="{StaticResource ControlTextColor}"
                     IsEnabled="{Binding IsProfileSelected, Converter={StaticResource InvertBoolean}}"
                     Style="{StaticResource OrderLookupWeightInput}"
-                    Visibility="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DimsAddWeight, Converter={StaticResource BooleanToVisibility}}"
-                    Weight="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSFP.DimsWeight}" />
+                    Visibility="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSWA.DimsAddWeight, Converter={StaticResource BooleanToVisibility}}"
+                    Weight="{Binding ShipmentModel.ShipmentAdapter.Shipment.AmazonSWA.DimsWeight}" />
             </Grid>
             <local:OrderLookupInsuranceControl
-                Grid.Row="8"
+                Grid.Row="7"
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
                 DataContext="{Binding InsuranceViewModel}" />
