change Amazon text to Amazon Shipping

--- a/Code/ShipWorks.Shipping.UI/Carriers/Amazon/SWA/AmazonSWAAuthorizationControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Carriers/Amazon/SWA/AmazonSWAAuthorizationControl.xaml
@@ -28,14 +28,14 @@
                    Grid.ColumnSpan="3">
             <TextBlock TextWrapping="WrapWithOverflow" Margin="0 0 0 10">
                 This wizard will assist you in configuring your Amazon
-                shipping account for use with ShipWorks. This enables
+                Shipping account for use with ShipWorks. This enables
                 you to begin shipping, tracking, and printing Amazon
-                shipping labels with your Amazon shipping account.
+                shipping labels with your Amazon Shipping account.
             </TextBlock>
 
             <TextBlock TextWrapping="WrapWithOverflow">
                 Amazon requires you to authorize ShipWorks to connect
-                to your Amazon account. This is done by logging into
+                to your Amazon Shipping account. This is done by logging into
                 a special Amazon page, granting ShipWorks access, and
                 copying and pasting the code on the last page into the Access
                 Code field below. For help,
