fix casing with Amazon Shipping

--- a/Code/ShipWorks.Shipping.UI/Carriers/Amazon/SWA/AmazonSWAAuthorizationControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Carriers/Amazon/SWA/AmazonSWAAuthorizationControl.xaml
@@ -30,7 +30,7 @@
                 This wizard will assist you in configuring your Amazon
                 Shipping account for use with ShipWorks. This enables
                 you to begin shipping, tracking, and printing Amazon
-                shipping labels with your Amazon Shipping account.
+                Shipping labels with your Amazon Shipping account.
             </TextBlock>
 
             <TextBlock TextWrapping="WrapWithOverflow">
