--- a/Code/ShipWorks.UI/Controls/Settings/WarehouseSettings.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/WarehouseSettings.xaml
@@ -1,41 +1,58 @@
-﻿<UserControl x:Class="ShipWorks.UI.Controls.Settings.WarehouseSettings"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ShipWorks.UI.Controls.Settings"
-             
-            FontFamily="Tahoma"
-            FontSize="8.25 pt"
-            FontStyle="Normal"
-            FontStretch="Normal"
-            FontWeight="Normal"
-             Background="White"
-             
-             mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=local:DesignModeWarehouseSettingsViewModel,IsDesignTimeCreatable=True}"
-             d:DesignHeight="450" d:DesignWidth="400">
+﻿<UserControl
+    x:Class="ShipWorks.UI.Controls.Settings.WarehouseSettings"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ShipWorks.UI.Controls.Settings"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vc="clr-namespace:ShipWorks.UI.ValueConverters"
+    d:DataContext="{d:DesignInstance Type=local:DesignModeWarehouseSettingsViewModel,
+                                     IsDesignTimeCreatable=True}"
+    d:DesignHeight="450"
+    d:DesignWidth="400"
+    Background="White"
+    FontFamily="Tahoma"
+    FontSize="8.25 pt"
+    FontStretch="Normal"
+    FontStyle="Normal"
+    FontWeight="Normal"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/GlobalStyle.xaml"/>
+                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/GlobalStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            
-            <Color x:Key="SectionHeaderBackground" A="255" R="238" G="238" B="238" />
+
+            <vc:InvertBooleanConverter x:Key="InvertBoolean" />
+
+            <Color
+                x:Key="SectionHeaderBackground"
+                A="255"
+                B="238"
+                G="238"
+                R="238" />
             <SolidColorBrush x:Key="SectionHeaderBackgroundBrush" Color="{StaticResource ResourceKey=SectionHeaderBackground}" />
-            <Color x:Key="SectionHeaderText" A="255" R="90" G="90" B="90" />
+            <Color
+                x:Key="SectionHeaderText"
+                A="255"
+                B="90"
+                G="90"
+                R="90" />
             <SolidColorBrush x:Key="SectionHeaderTextBrush" Color="{StaticResource ResourceKey=SectionHeaderText}" />
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid Margin="12">
-        <ScrollViewer VerticalScrollBarVisibility="Auto"
-                      Margin="0" 
-                      Padding="0">
+        <ScrollViewer
+            Margin="0"
+            Padding="0"
+            VerticalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
-                <Border Padding="8" 
-                        Background="{StaticResource ResourceKey=SectionHeaderBackgroundBrush}" 
-                        BorderBrush="LightGray" 
-                        BorderThickness="0, 0, 0, 1"
-                        Margin="0,0,0,8">
+                <Border
+                    Margin="0,0,0,8"
+                    Padding="8"
+                    Background="{StaticResource ResourceKey=SectionHeaderBackgroundBrush}"
+                    BorderBrush="LightGray"
+                    BorderThickness="0,0,0,1">
                     <TextBlock FontWeight="Bold" Foreground="{StaticResource ResourceKey=SectionHeaderTextBrush}">Warehouse Selection</TextBlock>
                 </Border>
                 <Grid>
@@ -44,14 +61,20 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Column="0" Margin="16,0,0,0" Text="{Binding WarehouseName}" />
-                    <Button Grid.Column="1" 
-                            Command="{Binding SelectWarehouse}"
-                            Padding="8,0"
-                            MinHeight="23">Select Warehouse</Button>
+                    <TextBlock
+                        Grid.Column="0"
+                        Margin="16,0,0,0"
+                        Text="{Binding WarehouseName}" />
+                    <Button
+                        Grid.Column="1"
+                        MinHeight="23"
+                        Padding="8,0"
+                        Command="{Binding SelectWarehouse}"
+                        IsEnabled="{Binding AssociatedWithWarehouse, Converter={StaticResource ResourceKey=InvertBoolean}}">
+                        Select Warehouse
+                    </Button>
                 </Grid>
             </StackPanel>
         </ScrollViewer>
-
     </Grid>
 </UserControl>
