--- a/Code/ShipWorks.UI/Controls/Settings/WarehouseListDialog.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/WarehouseListDialog.xaml
@@ -1,32 +1,32 @@
-﻿<Window x:Class="ShipWorks.UI.Controls.Settings.WarehouseListDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:ShipWorks.UI.Controls"
-        xmlns:vc="clr-namespace:ShipWorks.UI.ValueConverters"
-        xmlns:local="clr-namespace:ShipWorks.UI.Controls.Settings"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:DesignModeWarehouseListViewModel, IsDesignTimeCreatable=True}"
-        Title="Choose a warehouse"
-
-        WindowStartupLocation="CenterOwner"
-        WindowStyle="ToolWindow"
-        ShowInTaskbar="False"
-
-        FontFamily="Tahoma"
-        FontSize="8.25 pt"
-        FontStyle="Normal"
-        FontStretch="Normal"
-        FontWeight="Normal"
-
-        Height="240" Width="450"
-        MinHeight="120"
-        MinWidth="320">
+﻿<Window
+    x:Class="ShipWorks.UI.Controls.Settings.WarehouseListDialog"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:ShipWorks.UI.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ShipWorks.UI.Controls.Settings"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vc="clr-namespace:ShipWorks.UI.ValueConverters"
+    Title="Choose a warehouse"
+    Width="450"
+    Height="240"
+    MinWidth="320"
+    MinHeight="120"
+    d:DataContext="{d:DesignInstance local:DesignModeWarehouseListViewModel,
+                                     IsDesignTimeCreatable=True}"
+    FontFamily="Tahoma"
+    FontSize="8.25 pt"
+    FontStretch="Normal"
+    FontStyle="Normal"
+    FontWeight="Normal"
+    ShowInTaskbar="False"
+    WindowStartupLocation="CenterOwner"
+    WindowStyle="ToolWindow"
+    mc:Ignorable="d">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/GlobalStyle.xaml"/>
+                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/GlobalStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <vc:BooleanToVisibilityConverter x:Key="ShowWhenTrue" />
@@ -42,11 +42,12 @@
         <TextBlock Grid.Row="0" Margin="0,0,0,4">
             Select the warehouse that should be linked with this ShipWorks database
         </TextBlock>
-        <ListBox Grid.Row="1"
-                 ItemsSource="{Binding Warehouses}"
-                 SelectedItem="{Binding SelectedWarehouse}"
-                 HorizontalContentAlignment="Stretch"
-                 Visibility="{Binding LoadingFinished, Converter={StaticResource ResourceKey=ShowWhenTrue}}">
+        <ListBox
+            Grid.Row="1"
+            HorizontalContentAlignment="Stretch"
+            ItemsSource="{Binding Warehouses}"
+            SelectedItem="{Binding SelectedWarehouse}"
+            Visibility="{Binding LoadingFinished, Converter={StaticResource ResourceKey=ShowWhenTrue}}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid HorizontalAlignment="Stretch">
@@ -56,55 +57,65 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
-                        <StackPanel Grid.Column="0"
-                                    Margin="0, 0, 18, 4"
-                                    VerticalAlignment="Bottom">
+                        <StackPanel
+                            Grid.Column="0"
+                            Margin="0,0,18,4"
+                            VerticalAlignment="Top">
                             <TextBlock FontSize="14" Text="{Binding Name}" />
-                            <TextBlock Text="{Binding Code}" />
                         </StackPanel>
 
-                        <StackPanel Grid.Column="1"
-                                    Margin="0, 0, 18, 4"
-                                    VerticalAlignment="Bottom">
+                        <StackPanel
+                            Grid.Column="1"
+                            Margin="0,0,18,4"
+                            VerticalAlignment="Top">
                             <TextBlock Text="{Binding Street}" />
                             <TextBlock>
-                                <Run Text="{Binding City}" />, <Run Text="{Binding State}" /> <Run Text="{Binding Zip}" />
+                                <Run Text="{Binding City}" />
+                                ,<Run Text="{Binding State}" /> <Run Text="{Binding Zip}" />
                             </TextBlock>
                         </StackPanel>
 
-                        <TextBlock Grid.Column="2"
-                                   VerticalAlignment="Center"
-                                   FontSize="16"
-                                   Visibility="{Binding IsAlreadyLinked, Converter={StaticResource ResourceKey=ShowWhenTrue}}">Already Linked</TextBlock>
+                        <TextBlock
+                            Grid.Column="2"
+                            VerticalAlignment="Top"
+                            FontSize="16"
+                            Visibility="{Binding IsAlreadyLinked, Converter={StaticResource ResourceKey=ShowWhenTrue}}">
+                            Already Linked
+                        </TextBlock>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <TextBlock Grid.Row="1"
-                   Text="{Binding Message}"
-                   Margin="4"
-                   Visibility="{Binding ShowMessage, Converter={StaticResource ResourceKey=ShowWhenTrue}}"
-                   />
-        <controls:WaitSpinner Grid.Row="1"
-                              Visibility="{Binding LoadingFinished, Converter={StaticResource ResourceKey=ShowWhenFalse}}" />
+        <TextBlock
+            Grid.Row="1"
+            Margin="4"
+            Text="{Binding Message}"
+            Visibility="{Binding ShowMessage, Converter={StaticResource ResourceKey=ShowWhenTrue}}" />
+        <controls:WaitSpinner Grid.Row="1" Visibility="{Binding LoadingFinished, Converter={StaticResource ResourceKey=ShowWhenFalse}}" />
 
-        <controls:AlignmentWrapPanel Grid.Row="2"
-                               Margin="0, 8, 0, 0">
-            <StackPanel Grid.Row="1"
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Right">
-                <Button Padding="8, 4"
-                        Style="{StaticResource Button.Link}"
-                        Foreground="{StaticResource Blue}"
-                        VerticalAlignment="Center"
-                        IsCancel="True"
-                        Margin="12,0"
-                    Command="{Binding CancelLink}">Cancel</Button>
+        <controls:AlignmentWrapPanel Grid.Row="2" Margin="0,8,0,0">
+            <StackPanel
+                Grid.Row="1"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <Button
+                    Margin="12,0"
+                    Padding="8,4"
+                    VerticalAlignment="Center"
+                    Command="{Binding CancelLink}"
+                    Foreground="{StaticResource Blue}"
+                    IsCancel="True"
+                    Style="{StaticResource Button.Link}">
+                    Cancel
+                </Button>
 
-                <Button Grid.Row="2"
-                    Padding="8, 4"
-                    IsDefault="True"
-                    Command="{Binding ConfirmLink}">Link</Button>
+                <Button
+                    Grid.Row="2"
+                    Padding="8,4"
+                    Command="{Binding ConfirmLink}"
+                    IsDefault="True">
+                    Link
+                </Button>
             </StackPanel>
         </controls:AlignmentWrapPanel>
     </Grid>
