--- a/Code/ShipWorks.OrderLookup/ScanPack/ItemsToScanControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ItemsToScanControl.xaml
@@ -1,10 +1,12 @@
-<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ItemsToScan.ItemsToScanControl"
+<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ItemsToScanControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:scanPackItem="clr-namespace:ShipWorks.OrderLookup.ScanPack.ScanPackItem"
+             xmlns:scanPack="clr-namespace:ShipWorks.SingleScan.ScanPack;assembly=ShipWorks.SingleScan"
+             xmlns:scanPackUI="clr-namespace:ShipWorks.OrderLookup.ScanPack"
              mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance scanPack:ScanPackViewModel}"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -13,7 +15,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate x:Key="ItemsToScanTemplate">
-                <scanPackItem:ScanPackItemControl Margin="0 0 0 2"/>
+                <scanPackUI:ScanPackItemControl Margin="0 0 0 2"/>
             </DataTemplate>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -25,7 +27,7 @@
                   FontSize="16"
                   Background="{x:Static SystemColors.ControlBrush}">
             <ItemsControl
-                ItemsSource="{Binding Items}"
+                ItemsSource="{Binding ItemsToScan}"
                 ItemTemplate="{StaticResource ItemsToScanTemplate}"
                 Background="{x:Static SystemColors.ControlBrush}"
                 Margin="5"/>
