--- a/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/PackedControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.Packed.PackedControl"
+<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.PackedControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
