--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanControl.xaml
@@ -1,9 +1,11 @@
-<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.Scan.ScanControl"
+<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ScanControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:scanPack="clr-namespace:ShipWorks.SingleScan.ScanPack;assembly=ShipWorks.SingleScan"
              mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance scanPack:ScanPackViewModel}"
              d:DesignHeight="800" d:DesignWidth="500">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -29,7 +31,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0"
-                           Text="{Binding Header}"
+                           Text="{Binding ScanHeader}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="0 40 0 50"
@@ -42,7 +44,7 @@
                     </Canvas>
                 </Viewbox>
                 <TextBlock Grid.Row="2"
-                           Text="{Binding Footer}"
+                           Text="{Binding ScanFooter}"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="0 50 0 40"
