--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
@@ -1,14 +1,12 @@
-<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ScanPack.ScanPackControl"
+<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ScanPackControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:orderLookupSearchControl="clr-namespace:ShipWorks.OrderLookup.Controls.OrderLookupSearchControl"
              xmlns:dd="urn:gong-wpf-dragdrop"
-             xmlns:itemsToScan="clr-namespace:ShipWorks.OrderLookup.ScanPack.ItemsToScan"
-             xmlns:scan="clr-namespace:ShipWorks.OrderLookup.ScanPack.Scan"
-             xmlns:packed="clr-namespace:ShipWorks.OrderLookup.ScanPack.Packed"
              xmlns:scanPack="clr-namespace:ShipWorks.SingleScan.ScanPack;assembly=ShipWorks.SingleScan"
+             xmlns:scanPackUI="clr-namespace:ShipWorks.OrderLookup.ScanPack"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance scanPack:ScanPackViewModel}"
              x:Name="ScanPack"
@@ -69,14 +67,14 @@
                     </Style>
                 </Grid.Resources>
 
-                <itemsToScan:ItemsToScanControl
+                <scanPackUI:ItemsToScanControl
                     Grid.Column="0"
                     Margin="4,0,0,0"
                     DataContext="{Binding}"/>
-                <scan:ScanControl
+                <scanPackUI:ScanControl
                     Grid.Column="2"
                     DataContext="{Binding}"/>
-                <packed:PackedControl
+                <scanPackUI:PackedControl
                     Grid.Column="4"
                     Margin="0,0,4,0"/>
 
