--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanPackItemControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanPackItemControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ScanPackItem.ScanPackItemControl"
+<UserControl x:Class="ShipWorks.OrderLookup.ScanPack.ScanPackItemControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
