TP#32874: Implement Load in ScanPackViewModel. Move Scan and Pack related classes from SingleScan to OrderLookup assembly.

--- a/Code/ShipWorks.OrderLookup/ScanPack/ItemsToScanControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ItemsToScanControl.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:scanPack="clr-namespace:ShipWorks.SingleScan.ScanPack;assembly=ShipWorks.SingleScan"
-             xmlns:scanPackUI="clr-namespace:ShipWorks.OrderLookup.ScanPack"
+             xmlns:scanPack="clr-namespace:ShipWorks.OrderLookup.ScanPack"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance scanPack:ScanPackViewModel}"
              d:DesignHeight="300" d:DesignWidth="300">
@@ -15,7 +14,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate x:Key="ItemsToScanTemplate">
-                <scanPackUI:ScanPackItemControl Margin="0 0 0 2"/>
+                <scanPack:ScanPackItemControl Margin="0 0 0 2"/>
             </DataTemplate>
         </ResourceDictionary>
     </UserControl.Resources>
