--- a/Code/ShipWorks.UI/Styles/BlueSteel/Shapes.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/Shapes.xaml
@@ -34,5 +34,10 @@
         <Setter Property="Data" Value="M8.5,13.5L11,16.5L14.5,12L19,18H5M21,19V5C21,3.89 20.1,3 19,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19Z"/>
         <Setter Property="Fill" Value="Gray"/>
     </Style>
+
+    <Style x:Key="Barcode" TargetType="{x:Type Path}">
+        <Setter Property="Data" Value="M4,6H6V18H4V6M7,6H8V18H7V6M9,6H12V18H9V6M13,6H14V18H13V6M16,6H18V18H16V6M19,6H20V18H19V6M2,4V8H0V4A2,2 0 0,1 2,2H6V4H2M22,2A2,2 0 0,1 24,4V8H22V4H18V2H22M2,16V20H6V22H2A2,2 0 0,1 0,20V16H2M22,20V16H24V20A2,2 0 0,1 22,22H18V20H22Z"/>
+        <Setter Property="Fill" Value="Black"/>
+    </Style>
     
 </ResourceDictionary>
